--- a/package.json
+++ b/package.json
@@ -15,6 +15,12 @@
   "description": "",
   "dependencies": {
     "axios": "^1.10.0",
-    "chalk": "^5.4.1"
+    "chalk": "^5.4.1",
+    "simple-statistics": "^7.8.8"
+  },
+  "devDependencies": {
+    "@types/node": "^22.15.31",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.8.3"
   }
 }
